--- a/index.html
+++ b/index.html
@@ -443,6 +443,52 @@
         <br>
         <hr class="section-divider">
 
+        <h2>Example Generalization Conditions</h2>
+        <br>
+
+        <div class="slideshow-container">
+
+            <!-- BASE -->
+            <div class="video-container" style="text-align: center;">
+                <video width="60%" controls>
+                    <source src="videos/carrot/carrot_base.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+                <p >Put carrot on plate <b>[BASE]</b></p>
+            </div>
+
+            <!-- CAMERA -->
+            <div class="video-container" style="text-align: center;">
+                <video width="60%" controls>
+                    <source src="videos/carrot/carrot_camera.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+                <p >Put carrot on plate + new camera angle <b>[V-VIEW]</b></p>
+            </div>
+
+            <!-- DISTRACTORS -->
+            <div class="video-container" style="text-align: center;">
+                <video width="60%" controls>
+                    <source src="videos/carrot/carrot_distractors.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+                <p >Put carrot on plate + distractors <b>[V-SC]</b></p>
+            </div>
+
+            <!-- Next and previous buttons -->
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+
+        <div style="text-align:center">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+        </div>
+
+        <br>
+        <hr class="section-divider">
+
         <h2>Generate Your Own ★-Gen Conditions</h2>
         <br>
 
